<?xml version="1.0"?>
<package format="2">
  <name>geotf</name>
  <version>1.0.0</version>
  <description>Complex and powerful library for converting coordinates to/from several geodetic frames (lat/lon, ECEF, ENU, NED, etc.)</description>

  <author>Michael Pantic</author>

  <maintainer email="mpantic@ethz.ch">Michael Pantic</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

   <!-- Dependencies. -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
